--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "child_process": "^1.0.2",
     "express": "^4.16.3",
-    "mongodb": "^3.1.10"
+    "express-handlebars": "^3.0.0",
+    "mongodb": "^3.1.10",
+    "path": "^0.12.7"
   }
 }
