--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mongodb": "^3.1.10",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "simple-ssh": "^1.0.0"
   }
 }
